Feat/youtube login (#8)
* installed relevant libraries

* added new config for youttube

* created a youtube service

* exported youtube service

* added to controllers the google service

* fixed styles n colors

* login page changes to fit youtube

* assets location

* new swagger and routtes

* added type login

* fixes

* fixed bug witth autth middleware

* fixed event handler

* leaned up logic and moved things around

* proper colors per vendor

* removed workflow to run on push to main
