# api/src/controllers/auth.controller.ts
@@ -1,6 +1,6 @@
 import { Controller, Route, Request, Get, Post, Middlewares } from 'tsoa'
 import { Request as ExpressRequest } from 'express'
-import { SpotifyService } from '../services'
+import { SpotifyService, YoutubeService } from '../services'
 import { buildAuthMiddleware } from '../middlewares'
 import { config } from '../config'
 import { serialize } from '../utils'
@@ -27,5 +27,24 @@ export class AuthController extends Controller {
         res.redirect(
             `https://accounts.spotify.com/authorize?${authQueryParams}`
         )
+    }
+
+    @Post('/youtube/refresh')
+    @Middlewares(buildAuthMiddleware('youtube'))
+    public async refreshYoutubeAccessToken(): Promise<void> {
+        const refreshedCookieData = await YoutubeService.refreshAccessToken()
+
+        this.setHeader(
+            'Set-Cookie',
+            `${config.youtube.cookieName}=${encodeURIComponent(serialize(refreshedCookieData))}; Path=/; Secure; SameSite=Strict`
+        )
+    }
+
+    @Get('/youtube')
+    public async authYoutube(@Request() req: ExpressRequest): Promise<void> {
+        const res = req.res!
+        const authUrl = await YoutubeService.buildAuthUrl()
+
+        res.redirect(authUrl)
     }
 }
